Yet more removal of LinkedList usage